force-app/main/default/objects/Product_Price__c/Product_Price__c.object-meta.xml
<CustomObject>
    <label>Product Price</label>
    <nameField>
        <label>Product Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>