force-app/main/default/objects/Product_Price__c/fields/ATM_Fee_In_Other_Currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_In_Other_Currencies__c</fullName>
    <label>ATM Fee In Other Currencies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>