force-app/main/default/objects/Product_Price__c/fields/Car_Replacemnet_Cost__c.field-meta.xml
<CustomField>
    <fullName>Car_Replacemnet_Cost__c</fullName>
    <label>Car Replacemnet Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>