force-app/main/default/objects/Product_Price__c/fields/Cost_Per_Calender_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Calender_Month__c</fullName>
    <label>Cost Per Calender Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>